unpackaged/main/default/objects/FSL__Scheduling_Policy_Goal__c/FSL__Scheduling_Policy_Goal__c.object-meta.xml
<CustomObject>
    <label>Scheduling Policy Objective</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Scheduling Policy Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Policy Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>