unpackaged/main/default/objects/FSL__Scheduling_Policy_Goal__c/fields/FSL__Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipName>Scheduling_Policy_Goals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>