unpackaged/main/default/objects/FSL__Scheduling_Policy_Goal__c/fields/FSL__Service_Goal__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Goal__c</fullName>
    <label>Service Goal</label>
    <referenceTo>FSL__Service_Goal__c</referenceTo>
    <relationshipName>Scheduling_Policy_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>