unpackaged/main/default/objects/FSL__Scheduling_Policy_Goal__c/fields/FSL__Weight__c.field-meta.xml
<CustomField>
    <fullName>FSL__Weight__c</fullName>
    <label>Weight</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>