unpackaged/main/default/objects/FSL__Scheduling_Policy_Goal__c/validationRules/FSL__Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Not_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>FSL__Weight__c == 0</errorConditionFormula>
    <errorDisplayField>FSL__Weight__c</errorDisplayField>
    <errorMessage>Weight can&#39;t have zero value</errorMessage>
</ValidationRule>